refactor: remove legacy API token, deprecated by OAuth
